Update 2.4.4 - Fixed bootstarp responsive and admin-bar overlapping

--- a/style.css
+++ b/style.css
@@ -2,11 +2,31 @@
 Theme Name: Research
 Theme URI: https://github.com/davishoang96/wp_research
 Description: My very first theme on Worpdress
-Version: 2.4
+Version: 2.4.3
 Author: Hoang Duc Viet
 Author URI: https://www.facebook.com/vfxdirector
 Tags: itec, portfolio, resume, about, maps
 */
+
+/*Fix Overlapping admin-bar with bootstrap navigation bar*/
+.navbar-fixed-top { top: 0px; }
+body.admin-bar .navbar-fixed-top { top: 30px !important; }
+@media screen and ( max-width: 782px ) {
+        html { margin-top: 0px !important; }
+        * body { padding-top: 0px !important; }
+				body.admin-bar .navbar-fixed-top { top: 45px !important; }
+}
+@media screen and ( max-width: 600px ) {
+        html { margin-top: 0px ; }
+        * body { padding-top: 0px ; }
+				body.admin-bar .navbar-fixed-top {
+					position: relative;
+					margin-top: -45px !important;
+				}
+}
+
+
+
 #googleMap{
 	width: 100%;
 	height: 350px;
